# DaChuang-FLCFZ

./: @LongName  CMakeLists.txt  README.md  build.sh  docker-compose.yml  encodings.pickle  face_system.py  hikrobot_c_api.cpp  hikrobot_c_api.h  hikrobot_wrapper.py  libhikrobot.so.1  requirements.txt  test_camera.py
backend/: .env.example  .gitignore  Dockerfile  init_data.py  mental_screening.db  requirements.txt  sqlite_shell.py  start.bat  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  exceptions.py  responses.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/engines/: __init__.py  base.py
backend/app/schemas/: __init__.py  alert.py  case.py  retrieval.py  screening.py  user.py
backend/app/services/: alert_service.py  base.py  case_service.py  screening_service.py
backend/data/: dev.db
backend/db_tools/: Dockerfile  README.md  db.bat  db.sh  docker-compose.db.yml
docs/: API.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  PRD.md
docs/PaxHeader/: PRD.md
frontend/: ._.gitignore  .env  .env.example  API.md  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/PaxHeader/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  public  src  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/PaxHeader/: App.tsx  assets  components  data  index.css  main.tsx  pages
hikrobot/: hikrobot.cpp
(+65 files in other folders)
